--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+n<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="src/styles.css" />
@@ -19,7 +19,7 @@
       ></img>
       <ul class="nav-bar" id="nav-list">
         <li><a href="#about-me">About me</a></li>
-        <li><a href="https://github.com/kubowania">GitHub</a></li>
+        <li><a href="https://github.com/Retorin">GitHub</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
       <button class="hamburger" id="hamburger">
