--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="about-me">
         <img
           class="avatar"
-          src="images/Jokkebass.jpg"
+          src="images/Joakim headshot.jpg"
           alt="Joakim Reigstad Headshot"
         />
       </div>
