--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="hero">
       <div class="hero-info">
           <h1 id="name"> Joakim Reigstad </h1>
-          <p>I am a aspiring Software Developer. I love seeing results and problem solving.</p>
+          <p>I am an aspiring Software Developer. I love seeing results and problem solving.</p>
           <div class="styled-break"></div>
           <div class="button">Hire me</div>
       </div>
@@ -51,7 +51,7 @@
       </div>
       <div class="info">
           <h2><a name="about-me">About Me</a></h2>
-          <p>Born and raised in Norway, I discovered my passion for software development when building my first website for a local american football team</p>
+          <p>Born and raised in Norway, I discovered my passion for software development when building my first website for a local American football team.</p>
       </div>
     </section>
     <section>
