--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
           <label for="other">Other</label>
         </div>
         <div class="input-section">
-          <input type="checkbox" id="contract" name="contract" value="contract"></input>
+          <input type="checkbox" id="contract" name="employment" value="contract"></input>
           <label for="contract">Contract work</label>
-          <input type="checkbox" id="full-time" name="full-time" value="full-time"></input>
-          <label for="full-time">Full-time</label> 
-        </div>
+          <input type="checkbox" id="full-time" name="employment" value="full-time"></input>
+          <label for="full-time">Full-time</label>
+</div>
+ </div>
         <input class="button" type="submit" value="submit"></input>
       </form>
     </section>
