--- a/index.html
+++ b/index.html
@@ -75,12 +75,15 @@
           </div>
         </div>
         <div class="input-section">
-          <input type="radio" id="office" name="office" value="office"></input>
-          <label for="office">Office</label>
-          <input type="radio" id="remote" name="remote" value="remote"></input>
-          <label for="remote">Remote</label>
-          <input type="radio" id="other" name="other" value="other"></input>
-          <label for="other">Other</label>
+        <input type="radio" id="office" name="work-location" value="office"></input>
+        <label for="office">Office</label>
+        <input type="radio" id="remote" name="work-location" value="remote"></input>
+        <label for="remote">Remote</label>
+        <input type="radio" id="other" name="work-location" value="other"></input>
+        <label for="other">Other</label>
+        <input type="radio" id="none" name="work-location" value="" style="display: none;" checked></input>
+        </div>
+
         </div>
         <div class="input-section">
           <input type="checkbox" id="contract" name="employment" value="contract"></input>
