--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
     <footer>
       <ul>
-        <li><a href="">About me</a></li>
+       <!-- <li><a href="">About me</a></li> -->
         <li><a href="">Contact</a></li>
         <li><a href="https://github.com/Retorin">GitHub</a></li>
       </ul>
