--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <i class="far fa-bell"></i>
       <i class="far fa-bell"></i>
     </section>
-  <section>
-    <form>
+    <section>
+      <form>
         <h2>Contact Me</h2>
         <div class="input-section">
           <div class="input-group">
@@ -74,32 +74,30 @@
           <input type="text" id="last-name" name="last-name" value="Doe"></input>
           </div>
         </div>
-        <div class="input-section">
-        <input type="radio" id="office" name="work-location" value="office"></input>
-        <label for="office">Office</label>
-        <input type="radio" id="remote" name="work-location" value="remote"></input>
-        <label for="remote">Remote</label>
-        <input type="radio" id="other" name="work-location" value="other"></input>
-        <label for="other">Other</label>
-        <input type="radio" id="none" name="work-location" value="" style="display: none;" checked></input>
-        </div>
-
-        </div>
-        <div class="input-section">
-          <input type="checkbox" id="contract" name="employment" value="contract"></input>
-          <label for="contract">Contract work</label>
-          <input type="checkbox" id="full-time" name="employment" value="full-time"></input>
-          <label for="full-time">Full-time</label>
-    </form>
-  </section>
+       <div class="input-section">
+  <input type="radio" id="office" name="work-location" value="office"></input>
+  <label for="office">Office</label>
+  <input type="radio" id="remote" name="work-location" value="remote"></input>
+  <label for="remote">Remote</label>
+  <input type="radio" id="other" name="work-location" value="other"></input>
+  <label for="other">Other</label>
+  <input type="radio" id="none" name="work-location" value="" style="display: none;" checked></input>
 </div>
- </div>
+
+       
+        <div class="input-section">
+  <input type="checkbox" id="contract" name="employment" value="contract"></input>
+  <label for="contract">Contract work</label>
+  <input type="checkbox" id="full-time" name="employment" value="full-time"></input>
+  <label for="full-time">Full-time</label>
+</div>
+
         <input class="button" type="submit" value="submit"></input>
       </form>
     </section>
     <footer>
       <ul>
-       <!-- <li><a href="">About me</a></li> -->
+        <li><a href="">About me</a></li>
         <li><a href="">Contact</a></li>
         <li><a href="https://github.com/Retorin">GitHub</a></li>
       </ul>
