--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         alt="Joakim Reigstad Logo"
       ></img>
       <ul class="nav-bar" id="nav-list">
-        <li><a href="#about-me">About me</a></li>
+        <!--<li><a href="#about-me">About me</a></li>-->
         <li><a href="https://github.com/Retorin">GitHub</a></li>
         <li><a href="pages/contact.html">Contact</a></li>
       </ul>
@@ -97,7 +97,7 @@
     </section>
     <footer>
       <ul>
-        <li><a href="">About me</a></li>
+        <!--<li><a href="">About me</a></li>-->
         <li><a href="">Contact</a></li>
         <li><a href="https://github.com/Retorin">GitHub</a></li>
       </ul>
