--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <div class="input-section">
           <div class="input-group">
             <label for="first-name">First name:</label>
-            <input type="text" id="first-name" name="first-name" value="John"></input>
+            <input type="text" id="first-name" name="first-name" value=""></input>
           </div>
           <div class="input-group">
           <label for="last-name">Last name:</label>
-          <input type="text" id="last-name" name="last-name" value="Doe"></input>
+          <input type="text" id="last-name" name="last-name" value=""></input>
           </div>
         </div>
        <div class="input-section">
