--- a/index.html
+++ b/index.html
@@ -1,38 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Joakim Reigstad Portfolio</title>
-    <style>
-        body { font-family: Arial, sans-serif; background: #1f1f1f; color: #ffa500; padding: 20px; }
-        h1, h2 { color: #ff8c00; }
-        a { color: #ffa500; }
-        .cert { margin-bottom: 20px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Joakim Reigstad | Cybersecurity Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #1a1a1a;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #004080;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 10px;
+    }
+
+    .section {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .cert-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    .card img {
+      max-width: 100%;
+      border-radius: 4px;
+    }
+
+    .card h3 {
+      margin-top: 10px;
+      font-size: 1.1rem;
+      color: #004080;
+    }
+
+    a {
+      color: #004080;
+      text-decoration: none;
+    }
+
+    .footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #777;
+      margin: 40px 0 20px;
+    }
+  </style>
 </head>
 <body>
+
+  <header>
     <h1>Joakim Reigstad</h1>
-    <h2>Cybersecurity Enthusiast & Lifelong Learner</h2>
+    <p>Cybersecurity Enthusiast & Lifelong Learner</p>
     <p>
-        <a href="https://github.com/JoakimReigstad" target="_blank">GitHub</a> |
-        <a href="https://www.linkedin.com/in/joakimreigstad/" target="_blank">LinkedIn</a>
+      <a href="https://github.com/JoakimReigstad" style="color:#aee;">GitHub</a> |
+      <a href="https://www.linkedin.com/in/joakimreigstad/" style="color:#aee;">LinkedIn</a>
     </p>
+  </header>
 
-    <h2>TryHackMe</h2>
-    <img src="images/tryhackme_badge.png" alt="TryHackMe Badge" width="200"/>
+  <div class="section">
+    <h2>About Me</h2>
+    <p>
+      I’m Joakim Reigstad, a cybersecurity enthusiast with hands-on experience in penetration testing, digital forensics, and network security.
+      I’ve completed professional certifications from Coursera, Codecademy, and TryHackMe, and I’m passionate about protecting digital systems
+      and learning new tools and technologies in the field. I’m currently looking for roles where I can grow and contribute to meaningful security projects.
+    </p>
+  </div>
 
-    <h2>Codecademy</h2>
-    <div class="cert">✅ Fundamentals of Cybersecurity Skill Path</div>
-    <div class="cert">✅ Introduction to Ethical Hacking</div>
+  <div class="section">
+    <h2>Certifications & Badges</h2>
+    <div class="cert-grid">
 
-    <h2>Coursera</h2>
-    <div class="cert">
-        ✅ IBM Cybersecurity Analyst Certificate <br>
-        <a href="https://coursera.org/verify/professional-cert/V8NDBGDURJR9" target="_blank">Verify</a>
+      <div class="card">
+        <img src="images/tryhackme_badge.png" alt="TryHackMe Badge">
+        <h3>TryHackMe Achievements</h3>
+        <p>Completed various hands-on labs and hacking modules on TryHackMe.</p>
+      </div>
+
+      <div class="card">
+        <h3>Codecademy: Fundamentals of Cybersecurity</h3>
+        <p>Completed skill path covering core cybersecurity principles and tools.</p>
+      </div>
+
+      <div class="card">
+        <h3>Codecademy: Introduction to Ethical Hacking</h3>
+        <p>Covered reconnaissance, vulnerability scanning, and attack techniques.</p>
+      </div>
+
+      <div class="card">
+        <h3>Coursera: IBM Cybersecurity Analyst Certificate</h3>
+        <p><a href="https://coursera.org/verify/professional-cert/V8NDBGDURJR9" target="_blank">View Certificate</a></p>
+      </div>
+
+      <div class="card">
+        <h3>Coursera: Security Analyst Fundamentals</h3>
+        <p><a href="https://coursera.org/verify/specialization/2ELNWPJZW9P9" target="_blank">View Certificate</a></p>
+      </div>
+
     </div>
-    <div class="cert">
-        ✅ Security Analyst Fundamentals <br>
-        <a href="https://coursera.org/verify/specialization/2ELNWPJZW9P9" target="_blank">Verify</a>
-    </div>
+  </div>
+
+  <div class="footer">
+    © Joakim Reigstad — All rights reserved
+  </div>
+
 </body>
 </html>
