--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
     <div class="cert-grid">
 
       <div class="card">
+  <h3>TryHackMe Public Profile Badge</h3>
+  <iframe 
+    src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=718291" 
+    style="border:none;width:100%;height:300px;">
+  </iframe>
+</div>
+
+
+      <div class="card">
         <img src="images/tryhackme_badge.png" alt="TryHackMe Badge">
         <h3>TryHackMe Achievements</h3>
         <p>Completed various hands-on labs and hacking modules on TryHackMe.</p>
