--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@
       background-color: #004080;
       color: white;
       padding: 40px 20px;
-      text-align: center;
+    }
+
+    .header-flex {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .header-left {
+      flex: 1;
+      min-width: 250px;
+    }
+
+    .header-right {
+      flex: 0 0 auto;
+      padding-left: 20px;
     }
 
     header h1 {
@@ -78,12 +94,22 @@
 <body>
 
   <header>
-    <h1>Joakim Reigstad</h1>
-    <p>Cybersecurity Enthusiast & Lifelong Learner</p>
-    <p>
-      <a href="https://github.com/JoakimReigstad" style="color:#aee;">GitHub</a> |
-      <a href="https://www.linkedin.com/in/joakimreigstad/" style="color:#aee;">LinkedIn</a>
-    </p>
+    <div class="header-flex">
+      <div class="header-left">
+        <h1>Joakim Reigstad</h1>
+        <p>Cybersecurity Enthusiast & Lifelong Learner</p>
+        <p>
+          <a href="https://github.com/JoakimReigstad" style="color:#aee;">GitHub</a> |
+          <a href="https://www.linkedin.com/in/joakimreigstad/" style="color:#aee;">LinkedIn</a>
+        </p>
+      </div>
+      <div class="header-right">
+        <iframe 
+          src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=718291" 
+          style="border:none;width:200px;height:150px;">
+        </iframe>
+      </div>
+    </div>
   </header>
 
   <div class="section">
@@ -98,15 +124,6 @@
   <div class="section">
     <h2>Certifications & Badges</h2>
     <div class="cert-grid">
-
-      <div class="card">
-  <h3>TryHackMe Public Profile Badge</h3>
-  <iframe 
-    src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=718291" 
-    style="border:none;width:100%;height:300px;">
-  </iframe>
-</div>
-
 
       <div class="card">
         <img src="images/tryhackme_badge.png" alt="TryHackMe Badge">
@@ -143,3 +160,4 @@
 
 </body>
 </html>
+
