--- a/index.html
+++ b/index.html
@@ -104,10 +104,15 @@
         </p>
       </div>
       <div class="header-right">
-        <iframe 
-          src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=718291" 
-          style="border:none;width:300px;height:270px;">
-        </iframe>
+        <img 
+  src="https://tryhackme-badges.s3.amazonaws.com/718291.png" 
+  alt="TryHackMe Badge" 
+  style="width:300px;max-width:100%;border: none;" />
+<img 
+  src="https://tryhackme-badges.s3.amazonaws.com/718291.png" 
+  alt="TryHackMe Badge" 
+  style="width:300px;max-width:100%;border: none;" />
+        
       </div>
     </div>
   </header>
